[project]
name = "py-databases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mongoengine>=0.29.1",
    "mysql-connector-python>=9.1.0",
    "psycopg[binary,pool]>=3.2.3",
    "pymongo>=4.10.1",
    "pyodbc>=5.2.0",
    "redis[hiredis]>=5.2.1",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = "ruff check . --select I --fix && ruff format ."
